testsuite/tests/v1/import/module_not_found/test.out
Error: Module file not found
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ import foo
   │ ─────┬────  
   │      ╰────── Impossible to locate the file corresponding to the module "foo"
───╯
